<resources>
    <string name="app_name">InventarioMVP</string>
    <string name="txvSignIn">Acceder</string>
    <string name="txvUser">Nombre de usuario:</string>
    <string name="txvPassword">Contraseña:</string>
    <string name="chkRemember">Recuerdame</string>
    <string name="txvSingUp"><u>Acceder</u></string>
    <string name="btnSignIn">Acceder</string>
    <string name="btnGoogleSign">Conectar con google</string>
    <string name="btnFacebookSign">Conectar con facebook</string>
    <string name="edtUser">Usuario</string>
    <string name="txvName">Nombre</string>
    <string name="edtName">Escriba el nombre Nombre</string>
    <string name="edtSortName">Escriba el Nombre Corto</string>
    <string name="txvDescription">Descripcion</string>
    <string name="edtDescription">Escriba la Descripcion</string>
    <string name="txvCreationDate">Fecha creacion</string>
    <string name="btnChange">Cambiar</string>
    <string name="contentImgDashboard">Imagen Dashboard</string>
    <string name="txvNameProducts">Nombre:</string>
    <string name="txvSerial">Serial:</string>
    <string name="txvVendedor">Vendedor:</string>
    <string name="txvModelo">Modelo:</string>
    <string name="txvCategoria">Categoria:</string>
    <string name="txvSubcategoria">Subcategoria:</string>
    <string name="txvTipo">Tipo:</string>
    <string name="txvDescripcion">Descripcion:</string>
    <string name="txvPrecio">Precio:</string>
    <string name="txvFechaCompra">F. compra:</string>
    <string name="txvUrl">Url:</string>
    <string name="txvNotas">Notas:</string>
    <string-array name="spnCategoria">
        <item>Categoria1</item>
        <item>Categoria2</item>
        <item>Categoria3</item>
    </string-array>
    <string-array name="spnCategoria1">
        <item>Subcategoria1.1</item>
        <item>Subcategoria1.2</item>
        <item>Subcategoria1.3</item>
    </string-array>
    <string-array name="spnCategoria2">
        <item>Subcategoria2.1</item>
        <item>Subcategoria2.2</item>
        <item>Subcategoria2.3</item>
    </string-array>
    <string-array name="spnCategoria3">
        <item>Subcategoria3.1</item>
        <item>Subcategoria3.2</item>
        <item>Subcategoria3.3</item>
    </string-array>
    <string-array name="spnTipo">
        <item>Tipo1</item>
        <item>Tipo2</item>
        <item>Tipo3</item>
    </string-array>
    <string name="swtCambiarON">ON</string>
    <string name="swtCambiarOFF">OFF</string>
    <string name="txvSectorDefault">Sector por defecto</string>
    <string name="action_save">Guardar</string>
    <string name="action_general_settings">Ajustes Generales</string>
    <string name="action_account_settings">Ajustes de Cuenta</string>
    <string name="menuSave">Guardar menu</string>
    <string name="fragment_listdependency_delete">Borrar</string>
    <string name="btnOk">Si</string>
    <string name="btnCancel">No</string>
</resources>
