<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.loginlinearlayout.loginlinearlayout.LoginActivity"
    android:orientation="vertical"
    android:padding="@dimen/lly_login_padding"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txvSignIn_margin"
        android:text="@string/txvSignIn"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <TextView
        android:id="@+id/txvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edtUser"
        android:text="@string/txvUser" />
    <!-- android:labelFor="@id/edtUser" solo sirve para vincular el txv con el edt -->

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="@dimen/edtUser_margin"/>

    <TextView
        android:id="@+id/txvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edtPassword"
        android:text="@string/txvPassword" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/llySignOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/llySingOptions_margin">

        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chkRemember"/>

        <TextView
            android:id="@+id/txvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txvSingUp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSignIn"
        android:layout_marginLeft="@dimen/btnSignIn_margin"
        android:layout_marginRight="@dimen/btnSignIn_margin"
        android:layout_marginBottom="@dimen/btnSignIn_margin"/>

    <Button
        android:id="@+id/btnGoogleSign"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGoogle"
        android:drawableStart="@drawable/ic_google"
        android:text="@string/btnGoogleSign"
        android:layout_marginBottom="@dimen/btnGoogleSign_margin"/>
    <!-- imagenes http://romannurik.github.io/AndroidAssetStudio/icons-generic.html -->

    <Button
        android:id="@+id/btnFacebookSign"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFacebook"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/btnFacebookSign" />
</LinearLayout>
