<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.inventory.ui.products.ProductsActivity"
    android:id="@+id/android.R.id.content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgInformacion"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/monitor" />


        <TextView
            android:id="@+id/txvNombre"
            style="@style/txvProductsActivity"
            android:text="@string/txvNameProducts"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imgInformacion" />

        <EditText
            android:id="@+id/edtNombre"
            style="@style/edtProductsActivyty"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvNombre"
            app:layout_constraintEnd_toStartOf="@+id/imgQrcode"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/barrera" />


        <TextView
            android:id="@+id/txvSerial"
            style="@style/txvProductsActivity"
            android:text="@string/txvSerial"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txvNombre" />

        <EditText
            android:id="@+id/edtSerial"
            style="@style/edtProductsActivyty"
            android:layout_width="0dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvSerial"
            app:layout_constraintStart_toEndOf="@+id/barrera"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imgQrcode"
            android:layout_width="@dimen/imgQrcodeWidth"
            android:layout_height="@dimen/imgQrcodeWidth"
            android:layout_marginEnd="@dimen/edtProductsMarginEnd"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/edtSerial"
            app:layout_constraintTop_toTopOf="@id/edtSerial"
            app:srcCompat="@drawable/qrcode" />


        <TextView
            android:id="@+id/txvSeller"
            style="@style/txvProductsActivity"
            android:text="@string/txvVendedor"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txvSerial" />

        <EditText
            android:id="@+id/edtSeller"
            style="@style/edtProductsActivyty"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvSeller"
            app:layout_constraintEnd_toStartOf="@+id/imgQrcode"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/barrera" />


        <TextView
            android:id="@+id/txvModel"
            style="@style/txvProductsActivity"
            android:text="@string/txvModelo"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txvSeller" />

        <EditText
            android:id="@+id/edtModel"
            style="@style/edtProductsActivyty"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvModel"
            app:layout_constraintEnd_toStartOf="@+id/imgQrcode"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/barrera" />


        <TextView
            android:id="@+id/txvCategorie"
            style="@style/txvProductsActivity"
            android:text="@string/txvCategoria"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txvModel" />

        <Spinner
            android:id="@+id/spnCategorie"
            style="@style/styleSpinner"
            android:entries="@array/spnCategoria"
            app:layout_constraintBaseline_toBaselineOf="@id/txvCategorie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrera"
            app:layout_constraintTop_toTopOf="@+id/txvCategorie" />

        <TextView
            android:id="@+id/txvSubcategoria"
            style="@style/txvProductsActivity"
            android:text="@string/txvSubcategoria"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txvCategorie" />

        <Spinner
            android:id="@+id/spnSubcategoria"
            style="@style/styleSpinner"
            android:entries="@array/spnCategoria1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrera"
            app:layout_constraintTop_toTopOf="@+id/txvSubcategoria"
            app:layout_constraintBaseline_toBaselineOf="@id/txvSubcategoria"/>


        <TextView
            android:id="@+id/txvType"
            style="@style/txvProductsActivity"
            android:text="@string/txvTipo"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txvSubcategoria" />

        <Spinner
            android:id="@+id/spnType"
            style="@style/styleSpinner"
            android:entries="@array/spnTipo"
            app:layout_constraintBaseline_toBaselineOf="@id/txvType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrera"
            app:layout_constraintTop_toTopOf="@+id/txvType" />


        <TextView
            android:id="@+id/txvDescription"
            style="@style/txvProductsActivity"
            android:text="@string/txvDescripcion"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txvType"
            />

        <EditText
            android:id="@+id/edtDescription"
            style="@style/edtProductsActivyty"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/barrera"
            app:layout_constraintTop_toBottomOf="@+id/txvDescription" />


        <TextView
            android:id="@+id/txvPrice"
            style="@style/txvProductsActivity"
            android:text="@string/txvPrecio"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

        <EditText
            android:id="@+id/edtPrice"
            style="@style/edtProductsActivyty"
            android:layout_width="0dp"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/barrera" />


        <TextView
            android:id="@+id/txvBuyDate"
            style="@style/txvProductsActivity"
            android:text="@string/txvFechaCompra"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txvPrice" />

        <EditText
            android:id="@+id/edtBuyDate"
            style="@style/edtProductsActivyty"
            android:layout_width="0dp"
            android:inputType="datetime"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvBuyDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrera" />


        <TextView
            android:id="@+id/txvUrl"
            style="@style/txvProductsActivity"
            android:layout_marginTop="24dp"
            android:text="@string/txvUrl"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txvBuyDate" />

        <EditText
            android:id="@+id/edtUrl"
            style="@style/edtProductsActivyty"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:inputType="textUri"
            android:padding="5dp"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/txvUrl" />


        <TextView
            android:id="@+id/txvNotes"
            style="@style/txvProductsActivity"
            android:text="@string/txvNotas"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txvUrl" />

        <EditText
            android:id="@+id/edtNotes"
            style="@style/edtProductsActivyty"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/txvNotes" />


        <android.support.constraint.Barrier
            android:id="@+id/barrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="txvDescripcion,txvSubcategoria,txvModelo,txvVendedor,txvNombre,txvPrecio,txvTipo,txvCategoria,txvSerial,txvFechaCompra"
            tools:layout_editor_absoluteX="24dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>